--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -60,6 +60,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/WS_Storytelling")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/WS_Storytelling")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
