--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,6 +61,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/WS_Storytelling")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/WS_Storytelling")
 GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
+NearClipPlane=2.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
