11/04 - Door fix lvl 5

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=WS_Storytelling
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MAPS/Tests_GA_LVLS.Tests_GA_LVLS
-GameDefaultMap=/Game/LD_patern/Thomas/L_MainMenu.L_MainMenu
+EditorStartupMap=/Game/MAPS/L_Final_Level.L_Final_Level
+GameDefaultMap=/Game/MAPS/L_MainMenu.L_MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
