--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -137,3 +137,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/SubstanceCore.SubstanceSettings]
+CPUCores=16
+DefaultSubstanceOutputSizeX=SIZE_2048
+DefaultSubstanceOutputSizeY=SIZE_2048
+
