[dev] Light (help)

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=WS_Storytelling
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MAPS/L_Final_Level.L_Final_Level
+EditorStartupMap=/Game/MAPS/L_Final_Level1.L_Final_Level1
 GameDefaultMap=/Game/MAPS/L_MainMenu.L_MainMenu
 TransitionMap=
 bUseSplitscreen=True
